infrastructure/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-http
  namespace: homelab
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{subdomain:.+}.drnull.site`, `drnull.site`)
      kind: Rule
      services:
        - name: nginx-proxy
          port: 80
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-https
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    # Portainer
    - match: Host(`c.drnull.site`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
    # Drnull App
    - match: Host(`drnull.site`)
      kind: Rule
      services:
        - name: drnull-image
          port: 9006
    # Filebrowser
    - match: Host(`fb.drnull.site`)
      kind: Rule
      services:
        - name: filebrowser
          port: 9005
    # Glances
    - match: Host(`glances.drnull.site`)
      kind: Rule
      services:
        - name: glances
          port: 9016
    # WordPress
    - match: Host(`him.drnull.site`)
      kind: Rule
      services:
        - name: wordpress
          port: 9010
    # Jellyfin
    - match: Host(`jf.drnull.site`)
      kind: Rule
      services:
        - name: jellyfin
          port: 9001
    # Jupyter
    - match: Host(`jupyter.drnull.site`)
      kind: Rule
      services:
        - name: jupyter
          port: 9012
    # Kali (SSH)
    - match: Host(`kali.drnull.site`)
      kind: Rule
      services:
        - name: kali
          port: 2021
    # Metabase
    - match: Host(`metabase.drnull.site`)
      kind: Rule
      services:
        - name: metabase
          port: 9014
    # Nextcloud
    - match: Host(`nc.drnull.site`)
      kind: Rule
      services:
        - name: nextcloud
          port: 9004
    # PDF Service
    - match: Host(`pdf.drnull.site`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 9007
    # pgAdmin
    - match: Host(`pgadmin.drnull.site`)
      kind: Rule
      services:
        - name: pgadmin
          port: 9013
    # phpMyAdmin
    - match: Host(`pma.drnull.site`)
      kind: Rule
      services:
        - name: phpmyadmin
          port: 9009
    # pyLoad
    - match: Host(`py.drnull.site`)
      kind: Rule
      services:
        - name: pyload
          port: 9002
    # QR Web
    - match: Host(`qr.drnull.site`)
      kind: Rule
      services:
        - name: qr-web
          port: 9008
    # Syncthing
    - match: Host(`sync.drnull.site`)
      kind: Rule
      services:
        - name: syncthing
          port: 9003
    # VS Code
    - match: Host(`vscode.drnull.site`)
      kind: Rule
      services:
        - name: vscode
          port: 9011
  tls:
    certResolver: letsencrypt
    domains:
      - main: drnull.site
        sans:
          - "*.drnull.site"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: homelab
spec:
  redirectScheme:
    scheme: https
    permanent: true
    providers:
      kubernetesCRD: {}
    certificatesResolvers:
      letsencrypt:
        acme:
          email: smsmhasan@outlook.com
          storage: /data/acme.json
          httpChallenge:
            entryPoint: web
