infrastructure/nextcloud-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-https
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nc.drnull.site`) && PathPrefix(`/`)
      priority: 10
      middlewares:
        - name: nextcloud-headers
      services:
        - name: nextcloud
          port: 80
          scheme: http
          passHostHeader: true
  tls:
    certResolver: letsencrypt
    options:
      name: modern
      namespace: homelab
